Many improvements to background section

--- a/paper.bib
+++ b/paper.bib
@@ -813,3 +813,20 @@ YEAR="1988"}
 }
 
 
+@inproceedings{McBride16,
+  title = {I Got Plenty o' Nuttin'},
+  author = {Conor McBride},
+  year = {2016},
+  doi = {10.1007/978-3-319-30936-1_12},
+  url = {http://dx.doi.org/10.1007/978-3-319-30936-1_12},
+  researchr = {https://researchr.org/publication/McBride16},
+  cites = {0},
+  citedby = {0},
+  pages = {207-233},
+  booktitle = {A List of Successes That Can Change the World - Essays Dedicated to Philip Wadler on the Occasion of His 60th Birthday},
+  editor = {Sam Lindley and Conor McBride and Philip W. Trinder and Donald Sannella},
+  volume = {9600},
+  series = {Lecture Notes in Computer Science},
+  publisher = {Springer},
+  isbn = {978-3-319-30935-4},
+}
