Add paragraph on other languages we did this for

--- a/paper.bib
+++ b/paper.bib
@@ -830,3 +830,19 @@ YEAR="1988"}
   publisher = {Springer},
   isbn = {978-3-319-30935-4},
 }
+
+@article{DBLP:journals/corr/abs-2105-10819,
+  author    = {Artjoms Sinkarovs and
+               Jesper Cockx},
+  title     = {Choosing is Losing: How to combine the benefits of shallow and deep
+               embeddings through reflection},
+  journal   = {CoRR},
+  volume    = {abs/2105.10819},
+  year      = {2021},
+  url       = {https://arxiv.org/abs/2105.10819},
+  archivePrefix = {arXiv},
+  eprint    = {2105.10819},
+  timestamp = {Mon, 31 May 2021 16:16:57 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-2105-10819.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
