--- a/paper.tex
+++ b/paper.tex
@@ -477,14 +477,14 @@ code generators for them. We solve the well-known
 conundrum of choosing between deep and shallow
 embedding by leveraging the power of
 reflection.
-This allows us to enjoy simplicity of writing progams
+This allows us to enjoy simplicity of writing programs
 in shallow embedding.  Yet we keep full access to the internal
 structure of the embedded programs, so that we could translate
 them into the original language.
 
 We apply this idea in the context of dependently-typed
 language Agda.  We demonstrate the use of dependent types
-in order to enforce static propeties of the embedded programs.
+in order to enforce static properties of the embedded programs.
 Concretely, we have demonstrated the approach by implementing
 an extractor for a fragment of the PostScript language.
 
@@ -506,8 +506,8 @@ languages:
 \end{itemize}
 For more details on these examples,
 refer to~\citet{DBLP:journals/corr/abs-2105-10819}.
-This sugests that you are now empowered to apply the proposed
-technique tp verify code in any language.
+This suggests that you are now empowered to apply the proposed
+technique to verify code in any language.
 
 
 
